Started spectral analysis

--- a/Kuramoto/Kuramoto_dynamicalModels.ipynb
+++ b/Kuramoto/Kuramoto_dynamicalModels.ipynb
@@ -16,8 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "class dynamical_system:\n",
