Tried to verify CCM -- qualitatively  Figure 2A matches my results. Quantitatively, it does not.
Added Stationarity tests

--- a/Kuramoto/Deterministic_CCM_Analysis.ipynb
+++ b/Kuramoto/Deterministic_CCM_Analysis.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "Importing Jupyter notebook from Kuramoto_dynamicalModels.ipynb\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import ipdb\n",
