--- a/Kuramoto/Stochastic_TimeDomain_Granger_Analysis.ipynb
+++ b/Kuramoto/Stochastic_TimeDomain_Granger_Analysis.ipynb
@@ -3,14 +3,18 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
-     "output_type": "stream",
      "text": [
       "Importing Jupyter notebook from Kuramoto_dynamicalModels.ipynb\n"
-     ]
+     ],
+     "output_type": "stream"
     }
    ],
    "source": [
